--- a/README
+++ b/README
@@ -1,3 +1,7 @@
+forked from https://github.com/icefox/git-achievements
+
+---
+
 Git-Achievements records all of the achievements you acquire while using Git.
 
 There are over 40 achievement, most with different levels to be achieved.
@@ -11,7 +15,6 @@ git-achievements will display a message on the console for your enjoyment:
                     Added a .gitignore file to a repository.                    
 ********************************************************************************
 
-
 GitHub Pages
 ------------
 
@@ -19,9 +22,9 @@ A log of all of your achievements is kept locally, but you can also publish
 it to GitHub pages so you can share your achievements (and there is a rss
 feed so people can track your achievements).
 
-For example here is the project maintainer's achievements page: http://icefox.github.com/git-achievements
+For example here is the project maintainer's achievements page: http://michiel007.github.com/git-achievements
 
-If you are viewing a forked version of git-achievements you want to replace icefox
+If you are viewing a forked version of git-achievements you want to replace michiel007
 with the github user account you want to see like so:
 
 http://<username>.github.com/git-achievements
